HelloUltraviolet/Fixtures/RejectedSource/Procedures/MethodsAndReceiversDiagnostic/Source/Main.uv
//! Rejected method specimen for methods and receivers diagnostic coverage.

public record MethodsAndReceiversOwner {
    public value: i32

    public procedure readValue(self: i32) -> i32 {
        return self
    }
}
